<resources>
    <string name="app_name">Movie Roulette</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="btn_google">Login with Google</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_password_valid">Re-Enter Password</string>
    <string name="text_email">E-Mail</string>
    <string name="btn_register">Register</string>
    <string name="text_login">Login</string>
    <string name="title_favorites">Favorites</string>
    <string name="text_variable">Variable</string>
    <string name="text_friends">Friends</string>
    <string name="text_start">Start New Roulette</string>
    <string name="text_logout">Logout</string>
    <string name="text_login_with">Login With</string>
    <string name="text_theme">Choose Theme</string>
    <string name="text_username_email">Username/E-Mail</string>
    <string name="text_settings">Settings</string>
    <string name="text_privacy">Privacy Policy</string>
    <string name="text_terms">Terms and Conditions</string>
    <string-array name="themes">
        <item>Follow System</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="themoviedb">Movie information, movie pictures, actor information, actor pictures, director information and director pictures are taken from The Movie DB</string>
    <string name="username_taken">Username is taken</string>
    <string name="text_register_error">Registration failed. Please try again</string>
    <string name="text_register_success">Registration successful</string>
    <string name="text_enter_email">Please enter E-Mail address</string>
    <string name="text_enter_fields">Please fill all fields</string>
    <string name="text_enter_username">Please enter username</string>
    <string name="text_passwords_same">Passwords are not the same. Please check passwords</string>
    <string name="text_user_already_registered">User is already registered with another registration method</string>
    <string name="text_username_password">User not found or password incorrect</string>
    <string name="text_enter_username_password">Please enter username and password</string>
    <string name="text_add_friend">Add Friend</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_user_not_found">User not found</string>
    <string name="text_add">Add</string>
</resources>