<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:id="@+id/settingsRelative">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text_theme"
            android:id="@+id/themeText"
            android:layout_centerVertical="true"/>
        <Spinner
            android:layout_width="200dp"
            android:layout_toEndOf="@id/themeText"
            android:layout_height="wrap_content"
            android:id="@+id/settingsTheme"
            android:background="@drawable/gradient_spinner"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/privacyButton"
        android:layout_below="@id/settingsRelative"
        android:layout_marginTop="14dp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_privacy"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/termsButton"
        android:layout_marginTop="14dp"
        android:layout_below="@id/privacyButton"
        android:text="@string/text_terms"/>

</RelativeLayout>