<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginUsernameLayout"
            android:layout_width="300dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsername"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_username"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordLayout"
            android:layout_below="@id/loginUsernameLayout"
            android:layout_width="300dp"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPasswordLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mail"
                android:layout_width="wrap_content"
                android:layout_toEndOf="@id/btn_register"
                android:layout_marginStart="15dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/text_login"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/btn_register"/>
        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_with"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="600dp"
            android:id="@+id/loginText"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_facebook"
                android:id="@+id/facebookLogin"
                android:backgroundTint="@color/colorTransparent"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_github"
                android:layout_toEndOf="@id/facebookLogin"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/colorTransparent"
                android:id="@+id/githubLogin"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_google"
                android:backgroundTint="@color/colorTransparent"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/githubLogin"
                android:id="@+id/googleLogin"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_twitter"
                android:backgroundTint="@color/colorTransparent"
                android:layout_toEndOf="@id/googleLogin"
                android:id="@+id/twitterLogin"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>