<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/profilePicture"
            android:transitionName="picture"
            android:layout_centerHorizontal="true"
            android:elevation="9dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:layout_marginTop="85dp"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="50dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100dp"
                    android:id="@+id/profileName"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/profileName"
                    android:layout_marginTop="14dp"
                    android:text="@string/text_friends"
                    android:id="@+id/profileFriends"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profileFriends"
                    android:id="@+id/profileStart"
                    android:layout_marginTop="14dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text_start"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profileStart"
                    android:id="@+id/profileLogout"
                    android:layout_marginTop="14dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text_logout"/>
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>